@@ -1,3 +1,12 @@
+2007-02-03  Jens Granseuer  <jensgr@gmx.net>
+
+	Patch by: Paolo Borelli <pborelli@katamail.com>
+
+	* gnome-settings-keybindings.c: (get_screens_list),
+	(screen_exec_display_string), (entry_get_string),
+	(bindings_get_entry), (gnome_settings_keybindings_load): plug some
+	memory leaks (fixes bug #342672)
+
 2007-02-02  Jens Granseuer  <jensgr@gmx.net>
 
 	* actions/acme-volume-gstreamer.c:
